--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.1",
+    "@angular/animations": "^9.1.1",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
