--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "angular-confirmation-popover": "^5.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "ngx-toastr": "^12.0.1",
